[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radix"
version = "0.1.0"
description = "A lightweight, local-first command-line search engine."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
homepage = "https://github.com/yourusername/radix"
repository = "https://github.com/yourusername/radix"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["search", "fts5", "sqlite", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]

[project.dependencies]
typer = "^0.9.0"
rich = "^13.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.scripts]
radix = "radix.cli:app"